--- a/package.json
+++ b/package.json
@@ -22,17 +22,19 @@
     "@angular/router": "~12.2.0",
     "@apollo/client": "^3.5.5",
     "apollo-angular": "^2.6.0",
+    "crypto-js": "^4.1.1",
+    "graphql": "16.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
-    "graphql": "16.0.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.1",
     "@angular/cli": "~12.2.1",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/crypto-js": "^4.1.0",
     "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.39",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
