--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
       "esnext.asynciterable"
     ],
     "strictPropertyInitialization": false,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
