--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
-    "@apollo/client": "^3.5.5",
+    "@apollo/client": "^3.5.6",
     "apollo-angular": "^2.6.0",
     "crypto-js": "^4.1.1",
-    "graphql": "16.0.1",
+    "graphql": "^16.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
